MB-56634: Don't try to compute cpu percent utilization

And stop providing total (sum of user and sys). A caller
may calculate these numbers themselves, and it seems like
a bad idea that sigar should keep a cache of information
of other processes just in case someone comes along asking
for what's changed since the last time.

Change-Id: I6d1b67c624ed5553f914e40198b6c596abe69765
Reviewed-on: https://review.couchbase.org/c/sigar/+/190200
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>